@@ -1,5 +1,14 @@
 2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
 
+	* libdecnumber/dpd/decimal128.c [decNumberShow]: Remove prototype.
+	* libdecnumber/dpd/decimal32.c [decNumberShow]: Likewise.
+	* libdecnumber/dpd/decimal64.c [decNumberShow]: Likewise.
+	* libdecnumber/decNumber.c [decNumberShow]: Likewise.
+	* libdecnumber/decDebug.h: Move decNumberShow implementation to common
+	header.
+
+2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
+
 	* libdecnumber/dpd/decimal32.h: Move to ...
 	* libdecnumber/decimal32.h: ... here.
 	* libdecnumber/bid/decimal32.h: Remove file.
